<resources>
    <string name="app_name">Score Keeper</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="reset">Reset</string>
</resources>
