<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context="com.example.android.scorekeeper.MainActivity">


    <ImageView
        android:contentDescription="dice_image"
        android:id="@+id/dice_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:src="@drawable/dice_image_03" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dice_image"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/player_one"
                    android:textSize="@dimen/player_names" />

                <TextView
                    android:id="@+id/player_one_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/_0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/player_scores" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/player_two"
                    android:textSize="@dimen/player_names" />

                <TextView
                    android:id="@+id/player_two_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/_0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/player_scores" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">

                    <Button
                        style="@style/button_style"
                        android:onClick="addOneForPlayerOne"
                        android:text="@string/_1" />

                    <Button
                        style="@style/button_style"
                        android:onClick="addTwoForPlayerOne"
                        android:text="@string/_2" />

                    <Button
                        style="@style/button_style"
                        android:onClick="addThreeForPlayerOne"
                        android:text="@string/_3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:paddingRight="10dp">

                    <Button
                        style="@style/button_style"
                        android:onClick="addOneForPlayerOne"
                        android:text="@string/_4" />

                    <Button
                        style="@style/button_style"
                        android:onClick="addTwoForPlayerOne"
                        android:text="@string/_5" />

                    <Button
                        style="@style/button_style"
                        android:onClick="addThreeForPlayerOne"
                        android:text="@string/_6" />
                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/holo_green_dark" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">

                    <Button
                        style="@style/button_style"
                        android:onClick="addOneForPlayerOne"
                        android:text="@string/_1" />

                    <Button
                        style="@style/button_style"
                        android:onClick="addTwoForPlayerOne"
                        android:text="@string/_2" />

                    <Button
                        style="@style/button_style"
                        android:onClick="addThreeForPlayerOne"
                        android:text="@string/_3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:paddingRight="10dp">

                    <Button
                        style="@style/button_style"
                        android:onClick="addOneForPlayerOne"
                        android:text="@string/_4" />

                    <Button
                        style="@style/button_style"
                        android:onClick="addTwoForPlayerOne"
                        android:text="@string/_5" />

                    <Button
                        style="@style/button_style"
                        android:onClick="addThreeForPlayerOne"
                        android:text="@string/_6" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:text="@string/reset"
        android:textColor="@android:color/holo_green_dark" />

</RelativeLayout>
